# config_6dof_arm

./: README.md
arm_description/: CMakeLists.txt  package.xml
arm_description/config/: joint_names_arm_description.yaml
arm_description/launch/: display.launch.py
arm_description/meshes/: Gripper.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL
arm_description/mr/: .gitignore  mr_config.txt
arm_description/rviz/: urdf.rviz
arm_description/urdf/: arm_description.csv  arm_description.urdf
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: arm_description.ros2_control.xacro  arm_description.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
arm_moveit_config/launch/: feetech_moveit.launch.py  feetech_moveit.rviz  isaac_sim_bridge.launch.py
moveit_6dof_arm/: .setup_assistant  CMakeLists.txt  package.xml
moveit_6dof_arm/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  urdf_6dof_arm.ros2_control.xacro  urdf_6dof_arm.srdf  urdf_6dof_arm.urdf.xacro
moveit_6dof_arm/launch/: demo.launch.py  demo.rviz  feetech_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
urdf_6dof_arm/: .gitignore  CMakeLists.txt  package.xml
urdf_6dof_arm/launch/: display.launch.py  gazebo.launch
urdf_6dof_arm/meshes/: Gripper.STL  Link_0.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL
urdf_6dof_arm/urdf/: urdf_6dof_arm.csv  urdf_6dof_arm.urdf
